# Socket

./: README.md  requirements.txt  setup.cfg
src/austin_heller_repo/: socket.py  socket_client_factory.py
src/device_messaging_system_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt
src/socket_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_socket.py  test_socket_client_factory.py  test_ssl.py
