[metadata]
name = socket-austinhellerrepo
version = 0.4.3
author = Austin Heller
description = A basic socket package
url = https://github.com/AustinHellerRepo/Socket
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  certifi

[options.packages.find]
where = src
